Removed itemViewListSidebar as the new navPanel component makes it obsolete

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -5,9 +5,9 @@
 .js-get-item-vew-top-bar-component {
 	@include m.full-width-minus-nav-panel();
 
-	// z-index must be more than list-sidebar so item-options-dropdown-container will
-	// ...display overtop the list-sidebar if the screen gets too small
-	z-index: 2;
+	// z-index must be more than 'item-content-container' element in the itemView
+	// ...component so the 'options-components-container' element can overlap it
+	z-index: 1;
 	position: fixed;
 	top: v.$common-top-bar-top;
 	left: v.$common-left;
@@ -16,249 +16,6 @@
 	background-color: v.$mode-common-top-bar-background-color-light;
 	height: v.$common-top-bar-height;
 	font-family: Arial, Helvetica, sans-serif;
-
-	.search-container,
-	.js-get-search-container {
-		@include m.vertical-center();
-
-		left: v.$item-view-top-bar-search-bar-left;
-		width: v.$item-view-top-bar-search-bar-width;
-	}
-
-	.search-container__search-bar {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		display: inline-block;
-		outline: none;
-		border: v.$common-top-bar-search-bar-border-width solid
-			v.$default-theme-common-standard-border-background-color;
-		border-right: none;
-		border-radius: v.$common-top-bar-buttton-border-radius 0 0
-			v.$common-top-bar-buttton-border-radius;
-		padding: 0px v.$common-top-bar-search-bar-padding 0px
-			v.$common-top-bar-search-bar-padding;
-		background-color: v.$mode-common-top-bar-search-bar-background-color-light;
-		height: v.$common-top-bar-search-bar-height;
-		width: v.$item-view-top-bar-search-bar-width -
-			v.$common-top-bar-search-button-width;
-		font-size: v.$common-top-bar-search-bar-font-size;
-
-		&:focus {
-			border-width: v.$common-top-bar-search-bar-focus-border-width;
-		}
-	}
-
-	.search-container__search-button {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		display: inline-block;
-		// Instead of relative to make sure the button always stays next to the list-search-bar
-		position: absolute;
-		border-radius: 0 v.$common-top-bar-buttton-border-radius
-			v.$common-top-bar-buttton-border-radius 0;
-		background-color: v.$default-theme-common-standard-border-background-color;
-		height: v.$common-top-bar-search-bar-height;
-		width: v.$common-top-bar-search-button-width;
-		cursor: pointer;
-	}
-
-	.search-container__search-button__icon {
-		@include m.dead-center();
-		color: white;
-		font-size: v.$common-top-bar-search-button-icon-font-size;
-	}
-
-	// Supposed to contain item-view-top-bar-filter-button-component and
-	//  item-view-top-bar-filter-dropdown-component
-	.filter-components-container {
-		position: absolute;
-		left: v.$item-view-top-bar-filter-container-left;
-	}
-
-	// Supposed to contain item-view-top-bar-sort-button-component and
-	//  item-view-top-bar-sort-dropdown-component
-	.sort-components-container {
-		position: absolute;
-		left: v.$item-view-top-bar-sort-container-left;
-	}
-
-	@mixin filter-sort-button-shared-styles {
-		@include m.stop-text-selection();
-
-		// z-index must be more than item-view-top-bar-filter-dropdown-component and
-		// item-view-top-bar-sort-dropdown-component z-index so their top border
-		// can be covered over by the button components when with-dropdown-displayed
-		// modifier is appened to make the buttons and dropdowns look like one.
-		z-index: 1;
-		position: absolute;
-		top: 9px;
-		border: v.$common-top-bar-common-button-border-width solid
-			v.$mode-common-top-bar-button-and-dropdown-border-color-light;
-		border-radius: v.$common-top-bar-buttton-border-radius;
-		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-light;
-		height: v.$common-top-bar-button-height;
-		width: v.$item-view-top-bar-filter-sort-button-width;
-		color: v.$mode-common-top-bar-button-and-dropdown-text-color-light;
-		font-size: v.$common-top-bar-button-font-size;
-		text-align: center;
-		cursor: pointer;
-	}
-
-	.item-view-top-bar-filter-button-component {
-		@include filter-sort-button-shared-styles();
-	}
-
-	.item-view-top-bar-sort-button-component {
-		@include filter-sort-button-shared-styles();
-	}
-
-	@mixin filter-sort-button-with-dropdown-modifier-shared-styles {
-		// Negative top margin because border resize moves the element
-		margin: -(
-				v.$common-top-bar-filter-button-with-dropdown-displayed-border-width-difference
-			) 0px 0px;
-		border: v.$common-top-bar-filter-button-with-dropdown-displayed-border-width
-			solid black;
-		border-radius: v.$common-top-bar-buttton-border-radius
-			v.$common-top-bar-buttton-border-radius 0 0;
-		// No bottom border so button and dropdown both look like one element
-		border-bottom: none;
-		height: 45px;
-		width: v.$item-view-top-bar-filter-sort-button-width -
-			(
-				v.$common-top-bar-filter-button-with-dropdown-displayed-border-width-difference *
-					2
-			);
-	}
-
-	.item-view-top-bar-filter-button-component--with-dropdown-displayed {
-		@include filter-sort-button-with-dropdown-modifier-shared-styles();
-	}
-
-	.item-view-top-bar-sort-button-component--with-dropdown-displayed {
-		@include filter-sort-button-with-dropdown-modifier-shared-styles();
-	}
-
-	@mixin filter-sort-button-text-shared-styles {
-		// Used horizontal-center instead of dead-center since with-dropdown-displayed
-		// modifier would move the text
-		@include m.horizontal-center();
-		// Top found by eyeing it
-		top: 5px;
-		width: 100%;
-	}
-
-	.item-view-top-bar-filter-button-component__text {
-		@include filter-sort-button-text-shared-styles();
-	}
-
-	.item-view-top-bar-sort-button-component__text {
-		@include filter-sort-button-text-shared-styles();
-	}
-
-	.item-view-top-bar-filter-button-component__text--active {
-		font-weight: bold;
-		color: v.$common-top-bar-filter-button-active-color;
-	}
-
-	@mixin filter-sort-dropdown-shared-styles {
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		position: absolute;
-		// Additional 0.2px to fix border overflow in chrome and edge
-		top: 52.2px;
-		border: 3px solid black;
-		border-radius: 0 v.$common-top-bar-buttton-border-radius
-			v.$common-top-bar-buttton-border-radius
-			v.$common-top-bar-buttton-border-radius;
-		background-color: white;
-		height: v.$common-top-bar-filter-sort-dropdown-content-container-height;
-		cursor: default;
-	}
-
-	.item-view-top-bar-filter-dropdown-component {
-		@include filter-sort-dropdown-shared-styles();
-
-		width: v.$common-top-bar-filter-dropdown-content-container-width;
-	}
-
-	.item-view-top-bar-sort-dropdown-component {
-		@include filter-sort-dropdown-shared-styles();
-
-		width: v.$item-view-top-bar-sort-dropdown-content-container-width;
-	}
-
-	.item-view-top-bar-filter-dropdown-component--height-for-bugs {
-		height: v.$common-top-bar-filter-dropdown-content-container-for-bugs-height;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content {
-		float: left;
-		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top 0 0
-			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side;
-		text-align: center;
-		font-size: v.$common-top-bar-filter-dropdown-content-font-size;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content--right {
-		float: right;
-		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top
-			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content__title {
-		display: block;
-		margin: 2px 0px 5px 0px;
-		border-bottom: 1px solid gray;
-		padding-bottom: 3px;
-		font-weight: bold;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content__block {
-		text-align: left;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content__block__checkbox-container {
-		display: inline-block;
-		margin: v.$common-top-bar-filter-button-dropdown-checkbox-container-margin;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content__block__label {
-		display: inline-block;
-		margin: v.$common-top-bar-filter-button-dropdown-label-margin;
-	}
-
-	.item-view-top-bar-filter-dropdown-component__filter-content__block__label--active {
-		color: v.$common-top-bar-filter-button-active-color;
-	}
-
-	.item-view-top-bar-sort-dropdown-component__sort-content-block {
-		position: relative;
-		margin: 12.5px 0;
-		width: 100%;
-	}
-
-	.item-view-top-bar-sort-dropdown-component__sort-content-block__sort-arrows-container {
-		display: inline-block;
-		margin-left: 8px;
-		height: 100%;
-		// Since sort-arrow-buttons use m.vertical-center(), width is used
-		// ...instead of margin-right
-		width: 21px;
-	}
-
-	.item-view-top-bar-sort-dropdown-component__sort-content-block__title {
-		font-size: 15px;
-	}
 
 	// Supposed to contain item-view-top-bar-options-button-component and
 	// item-view-top-bar-options-dropdown-component
@@ -276,7 +33,7 @@
 		position: absolute;
 		right: 0px;
 		// Border given color through JS
-		border: v.$common-top-bar-filter-button-with-dropdown-displayed-border-width
+		border: v.$common-top-bar-button-with-dropdown-displayed-border-width
 			solid transparent;
 		// No bottom border so button and dropdown can both look like one 
 		// element when the dropdown is displayed and this button is given
