--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1115,20 +1115,17 @@
 
 .item-view-component .item-content-container,
 .js-get-item-view-component .item-content-container {
+  width: -webkit-calc(100% - 250px);
+  width: -moz-calc(100% - 250px);
+  width: calc(100% - 250px);
   position: fixed;
   top: 96px;
   left: 250px;
   height: 90vh;
-  width: 90vw;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: auto;
   overflow-x: auto;
-}
-.item-view-component .item-content-container--shifted-right,
-.js-get-item-view-component .item-content-container--shifted-right {
-  left: 527px;
-  width: 80vw;
 }
 .item-view-component .padding-container,
 .item-view-component .js-get-item-view-component-padding-container-element,
@@ -1767,126 +1764,12 @@
   background-color: #ebebeb;
 }
 
-.item-view-list-sidebar-component .expand-minimize-button,
-.js-get-item-view-list-sidebar-component .expand-minimize-button {
-  z-index: 1;
-  position: fixed;
-  top: 111px;
-  left: 252px;
-  border: 2px solid black;
-  border-left: none;
-  background-color: #e5e5e5;
-  height: 80px;
-  width: 25px;
-  cursor: pointer;
-}
-.item-view-list-sidebar-component .expand-minimize-button:hover, .item-view-list-sidebar-component .expand-minimize-button:active,
-.js-get-item-view-list-sidebar-component .expand-minimize-button:hover,
-.js-get-item-view-list-sidebar-component .expand-minimize-button:active {
-  background-color: #d6d6d6;
-}
-.item-view-list-sidebar-component .expand-minimize-button--expanded,
-.js-get-item-view-list-sidebar-component .expand-minimize-button--expanded {
-  left: 525px;
-}
-.item-view-list-sidebar-component .expand-minimize-button__centering-container,
-.js-get-item-view-list-sidebar-component .expand-minimize-button__centering-container {
-  height: 100%;
-  width: 100%;
-}
-.item-view-list-sidebar-component .expand-minimize-button__centering-container__icon-container,
-.js-get-item-view-list-sidebar-component .expand-minimize-button__centering-container__icon-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.item-view-list-sidebar-component .list-sidebar-container,
-.item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element,
-.js-get-item-view-list-sidebar-component .list-sidebar-container,
-.js-get-item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element {
-  z-index: 1;
-  display: none;
-  position: fixed;
-  top: 96px;
-  left: 250px;
-  border-right: 2px solid black;
-  height: 90vh;
-  width: 0px;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-.item-view-list-sidebar-component .list-sidebar-container--expanded,
-.item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element--expanded,
-.js-get-item-view-list-sidebar-component .list-sidebar-container--expanded,
-.js-get-item-view-list-sidebar-component .js-get-item-view-list-sidebar-component-container-element--expanded {
-  display: block;
-  width: 275px;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table {
-  border-collapse: collapse;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row,
-.item-view-list-sidebar-component .item-view-list-sidebar-item-row-component,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row,
-.js-get-item-view-list-sidebar-component .item-view-list-sidebar-item-row-component {
-  border-bottom: 1px solid #919191;
-  background-color: white;
-  height: 50px;
-  color: #272727;
-  text-align: center;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__empty-row,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__empty-row {
-  height: 50px;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row__header,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row__header {
-  z-index: 1;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  box-shadow: 0 1px 0 #919191;
-  background-color: white;
-  width: 275px;
-  color: black;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row__data,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row__data {
-  position: relative;
-  cursor: default;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 250px;
-  max-width: 250px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container--completed-color,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container--completed-color {
-  color: #008600;
-}
-.item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container__info__completed-icon,
-.js-get-item-view-list-sidebar-component .list-sidebar-container__table__row__data__ellipsis-container__info__completed-icon {
-  margin-right: 5px;
-  color: #008600;
-}
-
 .item-vew-top-bar-component,
 .js-get-item-vew-top-bar-component {
   width: -webkit-calc(100% - 250px);
   width: -moz-calc(100% - 250px);
   width: calc(100% - 250px);
-  z-index: 2;
+  z-index: 1;
   position: fixed;
   top: 49px;
   left: 250px;
@@ -1894,250 +1777,6 @@
   background-color: #e5e5e5;
   height: 46px;
   font-family: Arial, Helvetica, sans-serif;
-}
-.item-vew-top-bar-component .search-container,
-.item-vew-top-bar-component .js-get-search-container,
-.js-get-item-vew-top-bar-component .search-container,
-.js-get-item-vew-top-bar-component .js-get-search-container {
-  position: absolute;
-  top: 50%;
-  transform: translate(0%, -50%);
-  left: 15px;
-  width: 290px;
-}
-.item-vew-top-bar-component .search-container__search-bar,
-.js-get-item-vew-top-bar-component .search-container__search-bar {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline-block;
-  outline: none;
-  border: 2px solid #608d9e;
-  border-right: none;
-  border-radius: 5px 0 0 5px;
-  padding: 0px 8px 0px 8px;
-  background-color: white;
-  height: 28px;
-  width: 252px;
-  font-size: 14px;
-}
-.item-vew-top-bar-component .search-container__search-bar:focus,
-.js-get-item-vew-top-bar-component .search-container__search-bar:focus {
-  border-width: 3px;
-}
-.item-vew-top-bar-component .search-container__search-button,
-.js-get-item-vew-top-bar-component .search-container__search-button {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline-block;
-  position: absolute;
-  border-radius: 0 5px 5px 0;
-  background-color: #608d9e;
-  height: 28px;
-  width: 38px;
-  cursor: pointer;
-}
-.item-vew-top-bar-component .search-container__search-button__icon,
-.js-get-item-vew-top-bar-component .search-container__search-button__icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 14px;
-}
-.item-vew-top-bar-component .filter-components-container,
-.js-get-item-vew-top-bar-component .filter-components-container {
-  position: absolute;
-  left: 320px;
-}
-.item-vew-top-bar-component .sort-components-container,
-.js-get-item-vew-top-bar-component .sort-components-container {
-  position: absolute;
-  left: 415px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-button-component,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-button-component {
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Safari */
-  -khtml-user-select: none;
-  /* Konqueror HTML */
-  -moz-user-select: none;
-  /* Old versions of Firefox */
-  -ms-user-select: none;
-  /* Internet Explorer/Edge */
-  user-select: none;
-  /* Non-prefixed version, currently
-  supported by Chrome, Edge, Opera and Firefox */
-  z-index: 1;
-  position: absolute;
-  top: 9px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background-color: white;
-  height: 26px;
-  width: 80px;
-  color: black;
-  font-size: 14px;
-  text-align: center;
-  cursor: pointer;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-button-component,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-button-component {
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Safari */
-  -khtml-user-select: none;
-  /* Konqueror HTML */
-  -moz-user-select: none;
-  /* Old versions of Firefox */
-  -ms-user-select: none;
-  /* Internet Explorer/Edge */
-  user-select: none;
-  /* Non-prefixed version, currently
-  supported by Chrome, Edge, Opera and Firefox */
-  z-index: 1;
-  position: absolute;
-  top: 9px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background-color: white;
-  height: 26px;
-  width: 80px;
-  color: black;
-  font-size: 14px;
-  text-align: center;
-  cursor: pointer;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-button-component--with-dropdown-displayed,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-button-component--with-dropdown-displayed {
-  margin: -2px 0px 0px;
-  border: 3px solid black;
-  border-radius: 5px 5px 0 0;
-  border-bottom: none;
-  height: 45px;
-  width: 76px;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-button-component--with-dropdown-displayed,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-button-component--with-dropdown-displayed {
-  margin: -2px 0px 0px;
-  border: 3px solid black;
-  border-radius: 5px 5px 0 0;
-  border-bottom: none;
-  height: 45px;
-  width: 76px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-button-component__text,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-button-component__text {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  top: 5px;
-  width: 100%;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-button-component__text,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-button-component__text {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  top: 5px;
-  width: 100%;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-button-component__text--active,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-button-component__text--active {
-  font-weight: bold;
-  color: #2388a1;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  position: absolute;
-  top: 52.2px;
-  border: 3px solid black;
-  border-radius: 0 5px 5px 5px;
-  background-color: white;
-  height: 205px;
-  cursor: default;
-  width: 260px;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  position: absolute;
-  top: 52.2px;
-  border: 3px solid black;
-  border-radius: 0 5px 5px 5px;
-  background-color: white;
-  height: 205px;
-  cursor: default;
-  width: 120px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component--height-for-bugs,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component--height-for-bugs {
-  height: 160px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content {
-  float: left;
-  margin: 13px 0 0 20px;
-  text-align: center;
-  font-size: 14px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content--right,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content--right {
-  float: right;
-  margin: 13px 20px 0 0;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__title,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__title {
-  display: block;
-  margin: 2px 0px 5px 0px;
-  border-bottom: 1px solid gray;
-  padding-bottom: 3px;
-  font-weight: bold;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block {
-  text-align: left;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__checkbox-container,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__checkbox-container {
-  display: inline-block;
-  margin: 0px 3px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__label,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__label {
-  display: inline-block;
-  margin: 4px 3px;
-}
-.item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__label--active,
-.js-get-item-vew-top-bar-component .item-view-top-bar-filter-dropdown-component__filter-content__block__label--active {
-  color: #2388a1;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block {
-  position: relative;
-  margin: 12.5px 0;
-  width: 100%;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block__sort-arrows-container,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block__sort-arrows-container {
-  display: inline-block;
-  margin-left: 8px;
-  height: 100%;
-  width: 21px;
-}
-.item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block__title,
-.js-get-item-vew-top-bar-component .item-view-top-bar-sort-dropdown-component__sort-content-block__title {
-  font-size: 15px;
 }
 .item-vew-top-bar-component .options-components-container,
 .js-get-item-vew-top-bar-component .options-components-container {
@@ -3351,74 +2990,6 @@ body {
 .app-component .js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-true:hover, .app-component .js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-true:active,
 .js-get-app-component .js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-true:hover,
 .js-get-app-component .js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-true:active {
-  background-color: #444444;
-}
-.app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false {
-  border-color: black;
-  background-color: #e5e5e5;
-}
-.app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false:hover, .app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false:active,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false:hover,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-false:active {
-  background-color: #d6d6d6;
-}
-.app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true {
-  border-color: black;
-  background-color: #232323;
-}
-.app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true:hover, .app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true:active,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true:hover,
-.js-get-app-component .js-get-item-view-list-sidebar-component-expand-minimize-button-element-border-and-background-color-mode-true:active {
-  background-color: #232323;
-}
-.app-component .js-get-item-view-list-sidebar-component-sidebar-container-element-border-color-mode-false,
-.js-get-app-component .js-get-item-view-list-sidebar-component-sidebar-container-element-border-color-mode-false {
-  border-color: black;
-}
-.app-component .js-get-item-view-list-sidebar-component-sidebar-container-element-border-color-mode-true,
-.js-get-app-component .js-get-item-view-list-sidebar-component-sidebar-container-element-border-color-mode-true {
-  border-color: black;
-}
-.app-component .js-get-item-view-list-sidebar-component-table-row-header-element-box-shadow-background-text-color-dark-mode-false,
-.js-get-app-component .js-get-item-view-list-sidebar-component-table-row-header-element-box-shadow-background-text-color-dark-mode-false {
-  box-shadow: 0 1px 0 #919191;
-  background-color: white;
-  color: black;
-}
-.app-component .js-get-item-view-list-sidebar-component-table-row-header-element-box-shadow-background-text-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-list-sidebar-component-table-row-header-element-box-shadow-background-text-color-dark-mode-true {
-  box-shadow: 0 1px 0 #6d6d6d;
-  background-color: #2e2e2e;
-  color: #c7d1db;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-border-background-text-color-dark-mode-false,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-border-background-text-color-dark-mode-false {
-  border-color: #919191;
-  background-color: white;
-  color: #272727;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-border-background-text-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-border-background-text-color-dark-mode-true {
-  border-color: #6d6d6d;
-  background-color: #2e2e2e;
-  color: #c1cad4;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-hover-background-color-dark-mode-false:hover,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-hover-background-color-dark-mode-false:hover {
-  background-color: #f8f8f8;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-hover-background-color-dark-mode-true:hover,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-hover-background-color-dark-mode-true:hover {
-  background-color: #363636;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-selected-background-color-dark-mode-false,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-selected-background-color-dark-mode-false {
-  background-color: #e1e1e1;
-}
-.app-component .js-get-item-view-list-sidebar-item-row-component-selected-background-color-dark-mode-true,
-.js-get-app-component .js-get-item-view-list-sidebar-item-row-component-selected-background-color-dark-mode-true {
   background-color: #444444;
 }
 .app-component .js-get-item-view-component-item-content-container-element-background-color-dark-mode-false,
