--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -4,26 +4,19 @@
 .item-view-component,
 .js-get-item-view-component {
 	.item-content-container {
+		@include m.full-width-minus-nav-panel();
+
 		position: fixed;
 		top: v.$item-view-top;
 		left: v.$common-left;
 		// Height and width values were found through trial and error
 		// ...to make modal resize (using js) look less jumpy
 		height: 90vh;
-		width: 90vw;
+		//width: 90vw;
 		font-size: v.$common-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 		overflow-y: auto;
 		overflow-x: auto;
-	}
-
-	.item-content-container--shifted-right {
-		left: v.$common-left + v.$item-view-list-sidebar-expanded-width +
-			v.$item-view-list-sidebar-border-width;
-		// This width gets resized by JS. This value is chosen as a guess for
-		// ...trying to be closer to what the resize will be to create less
-		// ...of a jump
-		width: 80vw;
 	}
 
 	// Must be a seperate div inside .item-content-container so the padding
