--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -3,43 +3,33 @@
 
 .create-item-sidebar-component {
 	.blurred-backdrop {
+		@include m.full-width-minus-nav-panel();
+
 		// z-index must be more than listViewTopBar.scss
 		z-index: 1;
 		position: absolute;
 		top: v.$navbar-height;
+		left: v.$common-left;
 		background-color: v.$mode-common-blurred-backdrop-background-color-light;
 		opacity: v.$mode-common-blurred-backdrop-opacity-light;
 		height: 100vh;
-		width: 100vw;
 	}
 
 	.sidebar-container {
 		// z-index must be more than listViewTopBar.scss
 		z-index: 1;
 		position: fixed;
-		top: v.$navbar-height;
-		// Used by JS during resize to give margin to bottom
-		margin-bottom: 20px;
-		border: v.$common-sidebar-border-width solid black;
-		border-top: none;
-		border-width: v.$common-sidebar-border-width - 1 v.$common-sidebar-border-width
-			v.$common-sidebar-border-width 0;
+		top: v.$create-item-sidebar-top;
+		left: v.$common-left;
+		border-right: v.$common-sidebar-border-width solid black;
 		background-color: v.$mode-create-item-sidebar-background-color-light;
-		height: v.$create-item-sidebar-height;
+		height: 100vh;
 		width: v.$create-item-sidebar-width;
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
 		overflow-y: auto;
 		overflow-x: hidden;
-	}
-
-	.sidebar-container--taller {
-		height: v.$create-item-sidebar-height + 100;
-	}
-
-	.take-up-space {
-		height: 1000px;
 	}
 
 	.exit-icon-button {
